--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -81,8 +81,7 @@
   # this allows zplug to update itself on `zplug update`
   zplug 'zplug/zplug', hook-build:'zplug --self-manage'
 
-  #zplug "ohmyzsh/ohmyzsh", use:"lib/{clipboard,completion,directories,history,termsupport,key-bindings}.zsh"
-  zplug "robbyrussell/oh-my-zsh", use:"lib/{clipboard,completion,directories,history,termsupport,key-bindings}.zsh"
+  zplug "robbyrussell/oh-my-zsh", use:"lib/{clipboard,completion,directories,history,termsupport}.zsh"
   zplug "plugins/extract", from:oh-my-zsh
 
   for plugin in docker docker-compose git tmux tmuxinator autojump fzf gitignore cp; do
