fix: fix the cd widget

--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -146,7 +146,7 @@
 	typeset -f zle-line-init >/dev/null && zle zle-line-init
 	return $ret
       }
-      zle     -N    fzf-cd-bindkey
+      zle     -N    fzf-cd-widget
       bindkey '\ec' fzf-cd-widget
 
       # CTRL-R - Paste the selected command from history into the command line
