feat: enable fold under lsp-mode with lsp-origami-mode

--- a/hammers/emacs/lsp.org
+++ b/hammers/emacs/lsp.org
@@ -39,6 +39,10 @@
     :ensure t
     :commands lsp-treemacs-errors-list
     )
+  (use-package lsp-origami
+    :after origami
+    :hook
+    (origami-mode . lsp-origami-mode))
   ;; LSP UI tools
   (use-package lsp-ui
     :ensure t
