--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -193,17 +193,18 @@
      ("M-F" . sp-forward-symbol)
      ("M-B" . sp-backward-symbol)
      ("C-M-w" . sp-copy-sexp)
-     ("C-M-d" . sp-kill-sexp)
+     ("C-M-d" . sp-down-sexp)
+     ("C-M-u" . sp-up-sexp)
      ("M-<backspace>" . backward-kill-word)
      ("C-<backspace>" . sp-backward-kill-word)
      ([remap sp-backward-kill-word] . backward-kill-word)
-     ("C-c ("  . wrap-with-parens)
-     ("C-c ["  . wrap-with-brackets)
-     ("C-c {"  . wrap-with-braces)
-     ("C-c '"  . wrap-with-single-quotes)
-     ("C-c \"" . wrap-with-double-quotes)
-     ("C-c _"  . wrap-with-underscores)
-     ("C-c `"  . wrap-with-back-quotes)
+     ("C-c ("  . sp-wrap-round)
+     ("C-c ["  . sp-wrap-square)
+     ("C-c {"  . sp-wrap-curly)
+     ("C-c '"  . (lambda() (interactive) (sp-wrap-with-pair "\'")))
+     ("C-c \"" . (lambda() (interactive) (sp-wrap-with-pair "\"")))
+     ("C-c _"  . (lambda() (interactive) (sp-wrap-with-pair "_")))
+     ("C-c `"  . (lambda() (interactive) (sp-wrap-with-pair "`")))
      ("M-[" . sp-backward-unwrap-sexp)
      ("M-]" . sp-unwrap-sexp))
     :hook
