--- a/hammers/emacs/ui.org
+++ b/hammers/emacs/ui.org
@@ -83,7 +83,10 @@
   (use-package all-the-icons
     :config
     (unless (or (member "all-the-icons" (font-family-list)) m/offline)
-      (ignore-errors (all-the-icons-install-fonts t))))
+      (ignore-errors (all-the-icons-install-fonts t)
+		       (if (eq m/os 'linux)
+			 (set-default-font "-WQYF-WenQuanYi Micro Hei Mono-normal-normal-normal-*-15-*-*-*-*-0-iso10646-1"))))
+    )
 #+END_SRC
 
 *** 快速切换窗口
