feat(brew): disable auto install brew

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -148,7 +148,7 @@ cask 'gtkwave'
 #+END_SRC
 
 #+BEGIN_SRC shell :tangle no :exports code :results output
-brew bundle --global
+#brew bundle --global
 #+END_SRC
 
 #+RESULTS:
