feat: install the ditaa and plantuml via the brew

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -118,6 +118,8 @@ brew 'tldr'
 brew 'zsh-completions'
 brew 'graphviz'
 brew 'tree'
+brew 'ditaa'
+brew 'plantuml'
 
 brew 'reattach-to-user-namespace' if OS.mac?
 brew 'tmux'
@@ -152,3 +154,9 @@ cask 'gtkwave'
 #+END_SRC
 
 #+RESULTS:
+
+*** emacs 相关配置
+#+BEGIN_SRC shell :tangle ~/.zsh/init/brew.zsh :exports code :results none
+  (`which brew` ls ditaa 2>/dev/null || echo "") | grep "ditaa.*.jar" |xargs -I {} ln -sf {} ~/.emacs.d/ditaa.jar
+  (`which brew` ls plantuml 2>/dev/null || echo "") | grep "plantuml.jar" |xargs -I {} ln -sf {} ~/.emacs.d/plantuml.jar
+#+END_SRC
