--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -66,8 +66,6 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
     (private-directory "~/agendas")
     (m/pomodoro 45)
     (org-directory private-directory)
-    (org-ditaa-jar-path "~/.emacs.d/ditaa.jar")
-    (org-plantuml-jar-path "~/.emacs.d/plantuml.jar")
     (org-confirm-babel-evaluate nil)
     (org-clock-out-remove-zero-time-clocks t)
     (org-startup-folded 'content)
@@ -353,7 +351,6 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
      '((R . t)
        (dot . t)
        (ditaa . t)
-       (dot . t)
        (emacs-lisp . t)
        (gnuplot . t)
        (haskell . nil)
@@ -370,8 +367,27 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
        (sqlite . t))))
 #+END_SRC
 
-*** org-mode 流程图配置
-#+BEGIN_SRC elisp
+*** org-mode ditaa/plantuml 画图
+
+#+BEGIN_SRC elisp :exports code
+  (use-package org
+    :ensure org-plus-contrib
+    :config
+    (unless (and (boundp 'org-ditaa-jar-path)
+		 (file-exists-p org-ditaa-jar-path))
+      (let ((jar-name "ditaa.jar")
+	    (url "https://github.com/stathissideris/ditaa/releases/download/v0.11.0/ditaa-0.11.0-standalone.jar"))
+	(setq org-ditaa-jar-path (expand-file-name jar-name m/conf.d))
+	(unless (file-exists-p org-ditaa-jar-path)
+	  (url-copy-file url org-ditaa-jar-path))))
+
+    (unless (and (boundp 'org-plantuml-jar-path)
+		 (file-exists-p org-plantuml-jar-path))
+      (let ((jar-name "plantuml.jar")
+	    (url "https://downloads.sourceforge.net/project/plantuml/1.2020.2/plantuml.1.2020.2.jar"))
+	(setq org-plantuml-jar-path (expand-file-name jar-name m/conf.d))
+	(unless (file-exists-p org-plantuml-jar-path)
+	  (url-copy-file url org-plantuml-jar-path)))))
   (use-package plantuml-mode
     :after org
     :config
