--- a/hammers/ssh/config.org
+++ b/hammers/ssh/config.org
@@ -9,18 +9,29 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 *** VPN 设置
-#+BEGIN_SRC conf :tangle "~/.ssh/config" :results silent
-ForwardX11 yes
-RequestTTY yes
-
-Host vpn.seoul
-HostName 8.8.8.8
-User ec2-user
-Port 22
-IdentityFile ~/.ssh/keys/vpn.seoul.pem
-Host ubuntu.parallels
-HostName 10.211.55.10
-User neo
-Port 22
-IdentityFile ~/.ssh/id_rsa
+#+BEGIN_SRC conf :tangle "~/.ssh/config" :exports code :eval never
+  ForwardX11 yes
+  RequestTTY yes
+  Host vpn.seoul
+  HostName 8.8.8.8
+  User ec2-user
+  Port 22
+  IdentityFile ~/.ssh/keys/vpn.seoul.pem
 #+END_SRC
+*** ubuntu parallels
+#+begin_src conf :tangle "~/.ssh/config" :exports code :eval never
+  Host ubuntu.parallels
+  HostName 192.168.1.103
+  User neo
+  Port 22
+  IdentityFile ~/.ssh/id_rsa
+#+end_src
+*** ubuntu
+#+begin_src conf :tangle "~/.ssh/config" :exports code :eval never
+  Host ubuntu.trinity
+  HostName 192.168.1.106
+  User neo
+  Port 22
+  IdentityFile ~/.ssh/id_rsa 
+#+end_src
+
