--- a/hammers/emacs/languages.org
+++ b/hammers/emacs/languages.org
@@ -62,6 +62,7 @@
 *** verilog mode
 #+BEGIN_SRC elisp
   (use-package verilog-mode
+    :load-path m/load-path
     :config
     (autoload 'verilog-mode "verilog-mode" "Verilog mode" t )
     (add-to-list 'auto-mode-alist '("\\.[ds]?vh?\\'" . verilog-mode)))
