feat: ignore auto generate png under posts and drafts

--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -58,6 +58,9 @@
 ### Clangd ###
 # -*- mode: gitignore; -*-
 .clangd
+source/_posts/**/*.png
+source/_drafts/**/*.png
+
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
